--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@newrelic/test-utilities": "^1.2.1",
     "async": "^2.6.1",
+    "coveralls": "^3.0.2",
     "eslint": "^5.7.0",
     "generic-pool": "^2.5.4",
     "mysql": "^2.16.0",
