--- a/package.json
+++ b/package.json
@@ -26,17 +26,17 @@
   },
   "homepage": "https://github.com/newrelic/node-newrelic-mysql#readme",
   "devDependencies": {
-    "@newrelic/test-utilities": "^2.0.0",
+    "@newrelic/test-utilities": "^3.0.0",
     "async": "^2.6.1",
     "coveralls": "^3.0.2",
     "eslint": "^5.7.0",
     "generic-pool": "^2.5.4",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.1",
-    "newrelic": "^4.10.0",
+    "newrelic": "^5.9.0",
     "tap": "^11.1.5"
   },
   "peerDependencies": {
-    "newrelic": "^4.10.0"
+    "newrelic": ">=5.9.0"
   }
 }
