--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/newrelic/node-newrelic-mysql#readme",
   "engines": {
-    "node": ">=6.0.0 <11.0.0"
+    "node": ">=8.0.0"
   },
   "devDependencies": {
     "@newrelic/test-utilities": "^3.0.0",
@@ -34,12 +34,12 @@
     "coveralls": "^3.0.2",
     "eslint": "^5.7.0",
     "generic-pool": "^2.5.4",
-    "mysql": "^2.16.0",
-    "mysql2": "^1.6.1",
-    "newrelic": "^5.9.1",
-    "tap": "^11.1.5"
+    "mysql": "^2.17.1",
+    "mysql2": "^1.7.0",
+    "newrelic": "^5.13",
+    "tap": "^14.7.1"
   },
   "peerDependencies": {
-    "newrelic": ">=5.9.1"
+    "newrelic": ">=5.13"
   }
 }
