--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -35,7 +35,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x, 14.x]
+        node-version: [8.x, 10.x, 12.x, 14.x, 16.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -45,5 +45,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install Dependencies
       run: npm install
-    - name: Run Versioned Tests
-      run: npm run versioned
+    - name: Run Versioned Tests (npm v6 / Node 10-14)
+      if: ${{ matrix.node-version != '16.x' }}
+      run: npm run versioned:npm6
+    - name: Run Versioned Tests (npm v7 / Node 16)
+      if: ${{ matrix.node-version == '16.x' }}
+      run: npm run versioned:npm7
