--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "npm run versioned",
     "versioned": "npm run versioned:npm6",
-    "versioned:npm6": "versioned-tests --minor -i 2 'tests/versioned/*.tap.js'",
-    "versioned:npm7": "versioned-tests --minor --all -i 2 'tests/versioned/*.tap.js'",
+    "versioned:npm6": "versioned-tests --minor -i 2 'tests/versioned/**/*.tap.js'",
+    "versioned:npm7": "versioned-tests --minor --all -i 2 'tests/versioned/**/*.tap.js'",
     "lint": "eslint *.js lib tests"
   },
   "repository": {
