--- a/package.json
+++ b/package.json
@@ -41,5 +41,11 @@
   },
   "peerDependencies": {
     "newrelic": ">=6.11.0"
-  }
+  },
+  "files": [
+    "index.js",
+    "nr-hooks.js",
+    "lib/*",
+    "*.md"
+  ]
 }
