--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node": ">=12.0.0"
   },
   "devDependencies": {
+    "@newrelic/eslint-config": "^0.0.1",
     "@newrelic/test-utilities": "^5.1.0",
     "async": "^3.2.0",
     "eslint": "^7.32.0",
