--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npm run versioned",
     "third-party-updates": "oss third-party manifest && oss third-party notices && git add THIRD_PARTY_NOTICES.md third_party_manifest.json",
     "versioned": "npm run versioned:npm7",
+    "versioned:major": "versioned-tests --major --all -i 2 'tests/versioned/**/*.tap.js'",
     "versioned:npm6": "versioned-tests --minor -i 2 'tests/versioned/**/*.tap.js'",
     "versioned:npm7": "versioned-tests --minor --all -i 2 'tests/versioned/**/*.tap.js'",
     "lint": "eslint *.js lib tests",
@@ -35,7 +36,7 @@
   "devDependencies": {
     "@newrelic/eslint-config": "^0.0.2",
     "@newrelic/newrelic-oss-cli": "^0.1.2",
-    "@newrelic/test-utilities": "^6.2.0",
+    "@newrelic/test-utilities": "^6.3.0",
     "async": "^3.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -47,7 +48,7 @@
     "lint-staged": "^11.1.2",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
-    "newrelic": "^8.1.0",
+    "newrelic": "^8.6.0",
     "prettier": "^2.3.2",
     "tap": "^15.0.9"
   },
