--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "npm run versioned",
     "third-party-updates": "oss third-party manifest && oss third-party notices && git add THIRD_PARTY_NOTICES.md third_party_manifest.json",
     "versioned": "npm run versioned:npm7",
-    "versioned:major": "versioned-tests --major --all -i 2 'tests/versioned/**/*.tap.js'",
-    "versioned:npm6": "versioned-tests --minor -i 2 'tests/versioned/**/*.tap.js'",
-    "versioned:npm7": "versioned-tests --minor --all -i 2 'tests/versioned/**/*.tap.js'",
+    "versioned:major": "c8 -o ./coverage/versioned versioned-tests --major --all -i 2 'tests/versioned/**/*.tap.js'",
+    "versioned:npm6": "c8 -o ./coverage/versioned versioned-tests --minor -i 2 'tests/versioned/**/*.tap.js'",
+    "versioned:npm7": "c8 -o ./coverage/versioned versioned-tests --minor --all -i 2 'tests/versioned/**/*.tap.js'",
     "lint": "eslint *.js lib tests",
     "lint:fix": "eslint --fix *.js lib tests",
     "prepare": "husky install"
@@ -37,6 +37,7 @@
     "@newrelic/eslint-config": "^0.0.4",
     "@newrelic/newrelic-oss-cli": "^0.1.2",
     "@newrelic/test-utilities": "^6.3.0",
+    "c8": "^7.12.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-header": "^3.1.1",
