--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -20,6 +20,8 @@ jobs:
       run: npm install
     - name: Run Linting
       run: npm run lint
+    - name: Inspect Lockfile
+      run: npm run lint:lockfile
 
   versioned:
     runs-on: ubuntu-latest
