--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "versioned:npm7": "c8 -o ./coverage/versioned versioned-tests --minor --all -i 2 'tests/versioned/**/*.tap.js'",
     "lint": "eslint *.js lib tests",
     "lint:fix": "eslint --fix *.js lib tests",
+    "lint:lockfile": "lockfile-lint --path package-lock.json --type npm --allowed-hosts npm --validate-https --validate-integrity",
     "prepare": "husky install"
   },
   "repository": {
@@ -46,6 +47,7 @@
     "generic-pool": "^2.5.4",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
+    "lockfile-lint": "^4.9.6",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
     "newrelic": "^8.6.0",
