--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "test": "npm run versioned",
     "third-party-updates": "oss third-party manifest && oss third-party notices && git add THIRD_PARTY_NOTICES.md third_party_manifest.json",
-    "versioned": "npm run versioned:npm7",
+    "versioned": "c8 -o ./coverage/versioned versioned-tests --minor --all -i 2 'tests/versioned/**/*.tap.js'",
     "versioned:major": "c8 -o ./coverage/versioned versioned-tests --major --all -i 2 'tests/versioned/**/*.tap.js'",
-    "versioned:npm6": "c8 -o ./coverage/versioned versioned-tests --minor -i 2 'tests/versioned/**/*.tap.js'",
-    "versioned:npm7": "c8 -o ./coverage/versioned versioned-tests --minor --all -i 2 'tests/versioned/**/*.tap.js'",
     "lint": "eslint *.js lib tests",
     "lint:fix": "eslint --fix *.js lib tests",
     "lint:lockfile": "lockfile-lint --path package-lock.json --type npm --allowed-hosts npm --validate-https --validate-integrity",
